[package]
name = "tcp-test"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
colored = "2.1.0"
base64 = "0.21.7"

bytes = "1.5.0"
parking_lot = { version = "0.12.1", features = ["nightly"] }
dashmap = { version = "5.5.3", features = ["inline"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
log = "0.4.20"

[dependencies.tokio]
version = "1.35.1"
features = ["sync", "io-util", "time", "io-std", "macros", "rt-multi-thread"]